|
Quick Lists
|
|
Bug ID:
|
6755845
|
|
Votes
|
0
|
|
Synopsis
|
JVM_FindClassFromBoot triggers assertions
|
|
Category
|
hotspot:runtime_system
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b06)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6714758
|
|
Submit Date
|
03-OCT-2008
|
|
Description
|
JVM_FindClassFromBootLoader triggers assertions in debug builds.
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/interfaceSupport.hpp:170
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/net/baggy.sfbay/allmine/hg-launcher/jdk7/hotspot/src/share/vm/runtime/interfaceSupport.hpp:170), pid=9791, tid=2
# Error: assert(thread->thread_state() == _thread_in_native,"coming from wrong thread state")
#
# Java VM: Java HotSpot(TM) Client VM (14.0-b05-hg-launcher.ksrini.1003-fastdebug mixed mode solaris-sparc )
Posted Date : 2008-10-03 19:30:24.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Need to refactor the JVM_FindClassFromBootLoader and JVM_FindClassFromClassLoader
corrrectly, as one JVM entry point cannot call another, as it will set
the thread state incorrectly and twice.
Posted Date : 2008-10-03 19:30:24.0
http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/f008d3631bd1
Posted Date : 2008-10-08 18:00:04.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |