6755845: JVM_FindClassFromBoot triggers assertions

Fixes assertions caused by one jvm_entry calling another, solved by refactoring code and modified gamma test.

Reviewed-by: dholmes, xlu